# nyt-crossword-mini

./: .gitignore  README.md  api.py  connections_2025-08-05.json  crossword.py  download.py  main.py  mini.py  mini_crossword.json  mini_crossword.py  progress_store.py  puzzle.py  pyproject.toml  svg.py
tests/: test_api.py  test_crossword_game.py  test_download.py  test_progress_store.py  test_puzzle_loading.py
tests/test_puzzle_data_original/connections/: 2026-06-23.json  2026-06-24.json  2026-06-25.json
tests/test_puzzle_data_original/crossword/: 2026-06-23.json  2026-06-24.json  2026-06-25.json
tests/test_puzzle_data_original/midi/: 2026-06-23.json  2026-06-24.json  2026-06-25.json
tests/test_puzzle_data_original/mini/: 2026-06-23.json  2026-06-24.json  2026-06-25.json
web/: index.html  package-lock.json  package.json
web/src/: main.tsx  styles.css
