[project]
name = "nyt-crossword-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "peewee>=4.1.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "textual>=8.2.7",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
